# rabbitmq-producer

./: main.py  pyproject.toml
